<resources>
    <string name="app_name">Android Udemy Course</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Lucas Fagundes</string>
    <string name="nav_header_subtitle">lukasfcarneiro@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!--    Common-->
    <string name="empty" />

    <!--    Home-->
    <string name="home">Home</string>

    <!--    Random Number-->
    <string name="random_number">Numero Aleatorio</string>
    <string name="button_play">Jogar</string>
    <string name="click_below">Clique abaixo</string>
    <string name="choose_number">Escolha um numero de 0 a 20</string>
    <string name="number_answer">Numero escolhido: %1$s</string>
    <string name="no_number_chosen">Nenhum numero escolhido </string>

    <!--    Rock Paper Scissors-->
    <string name="rock_paper_scissors">Pedra Papel Tesoura</string>
    <string name="you_win">Voce Ganhou! </string>
    <string name="you_lose">Voce Perdeu! Loser</string>
    <string name="you_draw">Vish, Empatou!</string>
    <string name="choice_app">Escolha do App</string>
    <string name="choose_option">Escolha uma Opcao</string>

    <!--    Alcohol Gasoline-->
    <string name="alcohol_gasoline">Alcool ou Gasolina</string>
    <string name="subtitle_alcohol_gasoline">Saiba a melhor opção de abastecimento para seu veiculo</string>
    <string name="gasoline_name">Preço Gasoline ex: 4,50</string>
    <string name="alcohol_name">Preço Alcool ex: 2,90</string>
    <string name="better_alcohol">Melhor alcool</string>
    <string name="better_gasoline">Melhor gasolina</string>
    <string name="clean">Limpar</string>
    <string name="calculate">Calcular</string>
    <string name="fuel_price_comparison">%1$s é o preço do alcool em relação a gasolina</string>
    <string name="empty_field">Campo vazio</string>

    <!--    Tip Calculator-->
    <string name="tip_calculator">Calcular Gorjeta</string>
    <string name="percentage_100">100%</string>
    <string name="percentage_0">0%</string>
    <string name="tip">Gorjeta</string>
    <string name="total">Total</string>
    <string name="hint_bill_text">Digite o valor da conta</string>
    <string name="hint_bill_value">Ex: 36.50</string>
    <string name="value_text">R$0,00</string>
    <string name="money">R$ %1$s</string>
    <string name="percent">%1$s %%</string>

    <!--    Recycler View-->
    <string name="recycler_view">Recycler View</string>
    <string name="title_text">Titulo</string>
    <string name="year_text">Ano</string>
    <string name="genre_text">Genero</string>

    <!--    Atm Consultancy-->
    <string name="atm_consultancy">ATM Consultoria</string>
    <string name="nav_header_atm_subtitle">atendimento@atmconsultoria.com.br</string>
    <string name="main">Principal</string>
    <string name="services">Serviços</string>
    <string name="client">Clientes</string>
    <string name="contact_us">Entre em contato</string>
    <string name="exit">Sair</string>
    <string name="atm_service_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis vehicula tortor. Aenean felis nulla, blandit a malesuada sed, ullamcorper at nisi. Etiam eget nunc nunc. Aenean elementum, turpis sit amet elementum imperdiet, erat justo fringilla eros, ac aliquet elit metus at turpis. Sed sed est et nulla dignissim vestibulum. Donec odio magna, rutrum eu accumsan eu, tristique a ligula. Aenean a felis quis enim dignissim suscipit et eget odio.</string>
    <string name="service_title">Sistema de gestão da qualidade</string>
    <string name="service_title_2">Indicadores de desempenho</string>
    <string name="atm_client_subtitle">Em mais de 15 anos de existência a ATM acumula experiência em serviços de consultoria para empresas nacionais e multinacionais de diversos portes, tendo atendido mais de 1000 empresas desde sua abertura.</string>
    <string name="cielo">Cielo</string>
    <string name="braskem">Braskem</string>
    <string name="gerdau">Gerdau</string>
    <string name="embraer">Embraer</string>
    <string name="natura">Natura</string>
    <string name="americanas_store">Lojas Americanas</string>
    <string name="open_email_fab_description">Open email</string>
    <string name="share">Compartilhar</string>

    <!--    Beer Values-->
    <string name="beer_values">Valores de Cervejas</string>
    <string name="firstUnitPriceTextInput">Preço Unitario</string>
    <string name="secondUnitPriceTextInput">Preço Unitario</string>
    <string name="radio_button_250">250 ML</string>
    <string name="radio_button_350">350 ML</string>
    <string name="radio_button_473">473 ML</string>
    <string name="radio_button_600">600 ML</string>
    <string name="equal_prices">Os preços são iguais</string>
    <string name="enter_all_fields">Preencha todos os campos</string>
    <string name="select_all_measures">Selecione as duas medidas</string>
    <string name="better_buy_first">Melhor comprar o primeiro</string>
    <string name="better_buy_second">Melhor comprar o segundo</string>
    <string name="liter_price">O preço do litro é: R$ %1$s</string>

    <!--    Media Player-->
    <string name="media_player">Media Player</string>
    <string name="volume">Volume</string>
    <string name="music">Musica</string>
    <string name="video">Video</string>
    <string name="rick_and_morty">Rick and Morty</string>
    <string name="video_subtitle">2018 1 Temporada</string>
    <string name="video_synopsis">Acompanhe malucas viagens no tempo-espaço e por universos paralelos com Rick, um cientista com problemas com a bebida, e seu neto Morty, um adolescente não tão brilhante quanto o avô.</string>

    <!--    Learn English-->
    <string name="learn_english">Learn English</string>
    <string name="animals">Animals</string>
    <string name="numbers">Numbers</string>
    <string name="vowels">Vowels</string>

    <!--    My Annotations-->
    <string name="my_annotations">Minhas Anotações</string>
    <string name="modification_saved">Modificações salvas</string>
    <string name="note_not_found">Nota não encontrada</string>

    <!--    Task List-->
    <string name="task_list">Lista de tarefas</string>
    <string name="add_task">Adicione uma tarefa</string>
    <string name="add_new_task">Add new task</string>

</resources>

