<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_atm_consultancy"
            android:icon="@drawable/ic_business"
            android:title="@string/atm_consultancy" />
        <item
            android:id="@+id/nav_recycler_view"
            android:icon="@drawable/ic_list"
            android:title="@string/recycler_view" />
        <item
            android:id="@+id/nav_beer_values"
            android:icon="@drawable/ic_beer"
            android:title="@string/beer_values" />
        <item
            android:id="@+id/nav_tip_calculator"
            android:icon="@drawable/ic_money"
            android:title="@string/tip_calculator" />
        <item
            android:id="@+id/nav_alcohol_gasoline"
            android:icon="@drawable/ic_car"
            android:title="@string/alcohol_gasoline" />
        <item
            android:id="@+id/nav_rock_paper_scissors"
            android:icon="@drawable/ic_rock_paper_scissors"
            android:title="@string/rock_paper_scissors" />
        <item
            android:id="@+id/nav_random_number"
            android:icon="@drawable/ic_random_number"
            android:title="@string/random_number" />
    </group>
</menu>